--- a/src/components/matches-section/matches-section.twig
+++ b/src/components/matches-section/matches-section.twig
@@ -59,7 +59,7 @@
          <div class="o-content">
             <h2 class="h2">Únor 2022</h2>
          </div>
-         <div class="col-12 d-flex">
+         <div class="matches-section__box col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
                   <h3 class="h3">d</h3>    
@@ -101,9 +101,9 @@
                </div>
 
             </div>
-            <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
+            <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
-                  <h3 class="h3">V</h3>    
+                  <h3 class="h3">D</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -142,9 +142,9 @@
                </div>
 
             </div>
-            <div class="col-lg-6 col-xl-12 match match--o d-flex align-items-center">
+            <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
                <div class="match__type">
-                  <h3 class="h3">O</h3>    
+                  <h3 class="h3">v</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -183,9 +183,9 @@
                </div>
 
             </div>
-            <div class="col-lg-6 col-xl-12 match match--b d-flex align-items-center">
+            <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
                <div class="match__type">
-                  <h3 class="h3">b</h3>    
+                  <h3 class="h3">v</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -228,7 +228,7 @@
           <div class="o-content">
             <h2>Únor 2022</h2>
          </div>
-         <div class="col-12 d-flex">
+         <div class="matches-section__box col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
                   <h3 class="h3">d</h3>    
@@ -311,9 +311,9 @@
                </div>
 
             </div>
-            <div class="col-lg-6 col-xl-12 match match--o d-flex align-items-center">
+            <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
-                  <h3 class="h3">O</h3>    
+                  <h3 class="h3">d</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -352,9 +352,9 @@
                </div>
 
             </div>
-            <div class="col-lg-6 col-xl-12 match match--b d-flex align-items-center">
+            <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
                <div class="match__type">
-                  <h3 class="h3">b</h3>    
+                  <h3 class="h3">v</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -397,7 +397,7 @@
           <div class="o-content">
             <h2>Únor 2022</h2>
          </div>
-         <div class="col-12 d-flex">
+         <div class="matches-section__box col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
                   <h3 class="h3">d</h3>    
@@ -480,9 +480,50 @@
                </div>
 
             </div>
-            <div class="col-lg-6 col-xl-12 match match--o d-flex align-items-center">
+           <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
-                  <h3 class="h3">O</h3>    
+                  <h3 class="h3">d</h3>    
+               </div>
+               <div class="match__date">
+                  <p class="p3">1. kolo</p>
+                  <p class="p3">
+                     <strong>so 24. 7. 2021, 18:00</strong>
+                  </p>
+               </div>
+               <div class="match__logos">
+                <div class="match__logo">
+                     <img src="images/content/logo.png" loading="lazy" alt="" />
+                  </div>
+                  <div class="match__logo">
+                     <img src="images/content/team-2.png" loading="lazy" alt="" />
+                  </div>
+               </div>
+               <div class="match__team">
+                  <h2 class="h2">
+                     FC Sellier&Bellot Vlašim
+                  </h2>
+                  <p class="p3">
+                     Městský stadion, Opava
+                  </p>
+               </div>
+               <div class="match__info">
+                  <div class="match__result lose">
+                     2:4
+                  </div>
+                  <div class="match__links">
+                     <a href="#" target="_blank" class="btn p-btn">
+                        Reportáž
+                     </a>
+                     <a href="#" target="_blank" class="btn p-btn">
+                        On-line
+                     </a>
+                  </div>
+               </div>
+
+            </div>
+            <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
+               <div class="match__type">
+                  <h3 class="h3">v</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -509,51 +550,10 @@
                <div class="match__info">
                  
                   <div class="match__links">
-                   
-                     <a href="#" target="_blank" class="btn p-btn">
-                        On-line
-                     </a>
-                  </div>
-               </div>
-
-            </div>
-            <div class="col-lg-6 col-xl-12 match match--b d-flex align-items-center">
-               <div class="match__type">
-                  <h3 class="h3">b</h3>    
-               </div>
-               <div class="match__date">
-                  <p class="p3">1. kolo</p>
-                  <p class="p3">
-                     <strong>so 24. 7. 2021, 18:00</strong>
-                  </p>
-               </div>
-               <div class="match__logos">
-                <div class="match__logo">
-                     <img src="images/content/logo.png" loading="lazy" alt="" />
-                  </div>
-                  <div class="match__logo">
-                     <img src="images/content/team-2.png" loading="lazy" alt="" />
-                  </div>
-               </div>
-               <div class="match__team">
-                  <h2 class="h2">
-                     FC Sellier&Bellot Vlašim
-                  </h2>
-                  <p class="p3">
-                     Městský stadion, Opava
-                  </p>
-               </div>
-               <div class="match__info">
-                  <div class="match__result">
-                     3:3
-                  </div>
-                  <div class="match__links">
                      <a href="#" target="_blank" class="btn f-btn">
                         Vstupenky
                      </a>
-                     <a href="#" target="_blank" class="btn p-btn">
-                        On-line
-                     </a>
+                   
                   </div>
                </div>
 
