--- a/src/layouts/01.0_homepage.twig
+++ b/src/layouts/01.0_homepage.twig
@@ -3,6 +3,14 @@
 {% set title = "01.0_homepage" %}
 
 {% block main %}
+   {% include "@components/topstory-section/topstory-section.twig" %}
+   {% include "@components/count-down/count-down.twig" %}
+   {% include "@components/matches-dashboard/matches-dashboard.twig" %}
+   {% include "@components/fanshop/fanshop.twig" %}
+   {% include "@components/slider-news/slider-news.twig" %}
+   {% include "@components/hp-posts/hp-posts.twig" %}
 
+   {% include "@components/pub-section/pub-section.twig" %}
+   {% include "@components/partneri-section/partneri-section.twig" %}
 
 {% endblock %}
