--- a/src/components/base/base.scss
+++ b/src/components/base/base.scss
@@ -1,8 +1,14 @@
 .main {
-  background-image: url('../images/content/bg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 100%;
   height: 100%;
   padding-bottom: 56px;
+  position: relative;
+  width: 100%;
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-image: url("../images/content/bg.jpg");
+}
+.base {
+  background-color: #eef0f2;
 }
