--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,6 @@
   position: relative;
   color: var(--color-light);
   padding: 24px 0;
-
   .row {
     @include media-breakpoint-down(lg) {
       padding-top: 24px;
@@ -45,6 +44,7 @@
     height: 72px;
     padding: 0;
     display: block;
+    z-index: 99;
     img {
       width: 100%;
       height: 100%;
