--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,6 @@
 .header {
+  position: relative;
+  z-index: 2;
   padding: 0 4rem;
   color: var(--color-white);
   background: linear-gradient(135deg, #023e7a 0%, #004f9f 100%);
