--- a/src/components/matches-section/matches-section.scss
+++ b/src/components/matches-section/matches-section.scss
@@ -1,9 +1,14 @@
 .matches-section {
   &__inner {
     .col-12 {
-      box-shadow: -1px 0px 34px -1px rgba(0, 0, 0, 0.11);
       margin-bottom: 40px;
       flex-wrap: wrap;
     }
+  }
+
+  &__box {
+    background-color: #fff;
+    position: relative;
+    z-index: 999;
   }
 }
