--- a/src/components/team-section/team-section.scss
+++ b/src/components/team-section/team-section.scss
@@ -73,6 +73,7 @@
     }
   }
   &__item {
+    overflow: hidden;
     color: var(--color-text-base);
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -104,6 +105,7 @@
       width: 100%;
       height: 100%;
       margin: 0 auto;
+      z-index: 9;
       left: 0;
       right: 0;
     }
