--- a/src/layouts/00.0_atom.twig
+++ b/src/layouts/00.0_atom.twig
@@ -42,6 +42,10 @@
   <div class="p-3 u-shadow-1" style="background-color: #fff";>
     Stín 1 dp
   </div>
+  <br>
+   <div class="p-3 u-shadow-2" style="background-color: #fff";>
+    Stín 1 dp
+  </div>
   
   <hr />
   <h2 class="h2 mb-2">## Dropdown</h2>
