--- a/src/scss/06-components/_match.scss
+++ b/src/scss/06-components/_match.scss
@@ -1,8 +1,7 @@
 .match {
   padding: 24px 40px;
   background-color: #fff;
-  border-bottom: 2px solid var(--color-gray);
-
+  border-bottom: 1px solid var(--color-gray);
   &:last-child {
     border-bottom: none;
   }
@@ -10,15 +9,13 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-
   .btn + .btn {
     margin-left: 4px;
   }
   &--d,
   &--o {
-    background: rgb(238, 240, 242);
+    background: rgba(238, 240, 242, 0.4);
   }
-
   &__info {
     margin-left: auto;
     display: flex;
@@ -50,6 +47,9 @@
     }
   }
   &__team {
+    .h2 {
+      color: var(--color-blue);
+    }
     @include media-breakpoint-down(xl) {
       margin-bottom: 16px;
     }
@@ -125,8 +125,8 @@
 }
 
 .lose {
-  color: $red;
+  color: $red !important;
 }
 .win {
-  color: $green;
+  color: $green !important;
 }
