--- a/src/components/matches-dashboard-section/matches-dashboard-section.twig
+++ b/src/components/matches-dashboard-section/matches-dashboard-section.twig
@@ -1,4 +1,4 @@
-<div class="matches-dashboard">
+<section class="matches-dashboard">
    <div class="container">
       <div class="row ms-n5 me-n5">
          <div class="col-xl-4 col-lg-8 ps-5 pe-5 mx-auto">
@@ -11,23 +11,21 @@
                      <div class="matches-dashboard__logo">
                         <img src="images/ico/logo.svg" alt="">
                      </div>
-                     <div class="h5">
+                     <h2 class="h5">
                         Opava
-                     </div>
+                     </п>
                   </div>
-
                   <div class="matches-dashboard__info">
                      <span class="win">2:0</span>
                      vs.
                   </div>
-
                    <div class="matches-dashboard__team">
                      <div class="matches-dashboard__logo">
                         <img src="images/content/team-2.png" alt="">
                      </div>
-                     <div class="h5">
+                     <h2 class="h5">
                         Sparta B
-                     </div>
+                     </h2>
                   </div>
                </div>
                <ul class="d-flex justify-content-center me-n1 ms-n1">
@@ -38,7 +36,6 @@
                      <a href="#" class="btn p-btn">Fotogalerie</a>
                   </li>
                </ul>
-
             </div>
          </div>
          <div class="col-xl-4 col-lg-8  ps-5 pe-5 mx-auto">
@@ -51,23 +48,21 @@
                      <div class="matches-dashboard__logo">
                         <img src="images/ico/logo.svg" alt="">
                      </div>
-                     <div class="h5">
+                     <h2 class="h5">
                         Opava
-                     </div>
+                     </h2>
                   </div>
-
                   <div class="matches-dashboard__info">
                      <span>16:00</span>
                      vs.
                   </div>
-
                    <div class="matches-dashboard__team">
                      <div class="matches-dashboard__logo">
                         <img src="images/content/team-2.png" alt="">
                      </div>
-                     <div class="h5">
+                     <h2 class="h5">
                         Sparta B
-                     </div>
+                     </h2>
                   </div>
                </div>
                 <ul class="d-flex justify-content-center me-n1 ms-n1">
@@ -81,7 +76,7 @@
             <div class=" u-shadow-2 matches-dashboard__table">
                <div class="d-flex flex-wrap justify-content-between align-items-center">
                   <a href="https://www.fnliga.cz/" class="matches-dashboard__table-partner">
-                     <img src="images/content/logo-fnl_2018.png" alt="">
+                     <img src="images/content/logo-fnl_2018.png" loading="lazy" alt="">
                   </a>
                   <a href="#" class="matches-dashboard__table-link">
                      Celá tabulka
@@ -92,7 +87,7 @@
                      <tr>
                         <td class="num">4.</td>
                         <td class="logo">
-                           <img src="images/content/team-2.png" alt="">
+                           <img src="images/content/team-2.png" loading="lazy" alt="">
                         </td>
                         <td>FC Sellier&Bellot Vlašim</td>
                         <td class="text-end">15</td>
@@ -101,7 +96,7 @@
                       <tr>
                         <td class="num">5.</td>
                         <td class="logo">
-                           <img src="images/content/team-2.png" alt="">
+                           <img src="images/content/team-2.png" loading="lazy" alt="">
                         </td>
                         <td>1. SK Prostějov</td>
                         <td class="text-end">13</td>
@@ -110,7 +105,7 @@
                       <tr class="opava">
                         <td class="num">6.</td>
                         <td class="logo">
-                           <img src="images/ico/logo.svg" alt="">
+                           <img src="images/ico/logo.svg" loading="lazy" alt="">
                         </td>
                         <td>Slezský FC Opava</td>
                         <td class="text-end">12</td>
@@ -119,7 +114,7 @@
                       <tr>
                         <td class="num">7.</td>
                         <td class="logo">
-                           <img src="images/content/team-2.png" alt="">
+                           <img src="images/content/team-2.png" loading="lazy" alt="">
                         </td>
                         <td>FK Varnsdorf</td>
                         <td class="text-end">23</td>
@@ -128,7 +123,7 @@
                       <tr>
                         <td class="num">8.</td>
                         <td class="logo">
-                           <img src="images/content/team-2.png" alt="">
+                           <img src="images/content/team-2.png" loading="lazy" alt="">
                         </td>
                         <td>FK Dukla Praha</td>
                         <td class="text-end">24</td>
@@ -140,4 +135,4 @@
          </div>
       </div>
    </div>
-</div>
+</section>
