--- a/src/components/topstory-section/topstory-section.twig
+++ b/src/components/topstory-section/topstory-section.twig
@@ -2,29 +2,29 @@
    <div class="row m-0">
       <div class="topstory__item">
             <a class="topstory__img" href="#">
-               <img src="images/content/1.jpg" alt="">
+               <img src="images/content/1.jpg" loading="lazy" alt="">
                <div class="topstory__info">
-                  <h2 class="h1">
+                  <h1 class="h1">
                      Vítězná série pokračuje! Varnsdorf zlomily trefy Šiguta s Holíkem
-                  </h2>
+                  </h1>
                   <div class="date date--blue">16. 12. 2021</div>
                </div>
             </a>
          </div>
           <div class="topstory__item active">
             <a class="topstory__img" href="#">
-               <img src="images/content/2.jpg" alt="">
+               <img src="images/content/2.jpg" loading="lazy" alt="">
                <div class="topstory__info">
-                  <h1 class="h1">
+                  <h2 class="h1">
                      West po porážce s Brnem: Měli jsme rozhodnout v první půli
-                  </h1>
+                  </h2>
                   <div class="date date--blue">16. 12. 2021</div>
                </div>
             </a>
          </div>
          <div class="topstory__item">
             <a class="topstory__img" href="#">
-               <img src="images/content/3.jpg" alt="">
+               <img src="images/content/3.jpg" loading="lazy" alt="">
                <div class="topstory__info">
                   <h2 class="h1">
                      Domácí neporazitelnost trvá! Výhru nad béčkem Sparty řídil Helešic
