--- a/src/components/fanshop-section/fanshop-section.twig
+++ b/src/components/fanshop-section/fanshop-section.twig
@@ -1,10 +1,10 @@
-<div class="fanshop">
+<section class="fanshop">
    <div class="container">
          <div class="d-flex flex-wrap">
             <div class="col-xl-3 col-sm-6 col-12">
                <a href="#" class="fanshop-link">
                   <div class="fanshop-link__logo">
-                     <img src="images/ico/logo.svg" alt="">
+                     <img src="images/ico/logo.svg" loading="lazy" alt="">
                   </div>
                   <h2 class="h2">
                      Oficiální
@@ -18,7 +18,7 @@
             <div class="col-xl-3 col-sm-6 col-12">
                <a href="#" class="product">
                   <div class="product__img">
-                     <img src="images/content/svetr.png" alt="">
+                     <img src="images/content/svetr.png" loading="lazy" alt="">
                   </div>
                     <div class="fanshop__btn ">
                     {% include "@images/cart.svg" %} 899 Kč
@@ -28,7 +28,7 @@
              <div class="col-xl-3 col-sm-6 col-12">
                <a href="#" class="product">
                   <div class="product__img">
-                     <img src="images/content/svetr.png" alt="">
+                     <img src="images/content/svetr.png" loading="lazy" alt="">
                   </div>
                     <div class="fanshop__btn ">
                     {% include "@images/cart.svg" %} 899 Kč
@@ -38,13 +38,13 @@
              <div class="col-xl-3 col-sm-6 col-12">
                <a href="#" class="product">
                   <div class="product__img">
-                     <img src="images/content/svetr.png" alt="">
+                     <img src="images/content/svetr.png" loading="lazy" alt="">
                   </div>
                     <div class="fanshop__btn ">
                     {% include "@images/cart.svg" %} 899 Kč
                   </div>
                </a>
             </div>
-         </div>
+      </div>
    </div>
-</div>
+</section>
