--- a/src/components/hp-posts-section/hp-posts-section.twig
+++ b/src/components/hp-posts-section/hp-posts-section.twig
@@ -1,7 +1,6 @@
-<div class="hp-posts">
+<section class="hp-posts">
    <div class="container">
       <div class="row flex-wrap  hp-posts__inner">
-        
          <div class="col-12 col-sm-6 col-lg-4 pe-5 ps-5 hp-posts__col">
              {% include "@components/post/post.twig" %}
          </div>
@@ -24,8 +23,6 @@
           <div class="col-12 col-sm-6 col-lg-4 pe-5 ps-5 hp-posts__col">
              {% include "@components/post/post.twig" %}
          </div>
-       
-
       </div>
    </div>
-</div>
+</section>
