--- a/src/components/pub-section/pub-section.twig
+++ b/src/components/pub-section/pub-section.twig
@@ -1,4 +1,4 @@
-<div class="pub">
+<section class="pub">
    <div class="container">
       <div class="row  c-gallery-section ms-n5 me-n5">
          <div class="col-xl-6 ps-5 pe-5">
@@ -8,7 +8,6 @@
                </a>
             </figure>
          </div>
-         
          <div class="col-xl-6 ps-5 pe-5">
             <figure>
                <a target="_blank" href="#" class=" d-block w-100 mb-4">
@@ -18,4 +17,4 @@
          </div>
       </div>
    </div>
-</div>
+</section>
