--- a/src/components/hp-posts-section/hp-posts-section.twig
+++ b/src/components/hp-posts-section/hp-posts-section.twig
@@ -24,5 +24,6 @@
              {% include "@components/post/post.twig" %}
          </div>
       </div>
+      <a href="#" class="btn p-btn">Další články</a>
    </div>
 </section>
