--- a/src/scss/03-generic/_generic.root.scss
+++ b/src/scss/03-generic/_generic.root.scss
@@ -2,6 +2,7 @@
   --color-dark: #000;
   --color-blue: #004f9f;
   --color-gray: #d7dcdf;
+  --color-gray2: #a0a0a0;
   --color-shadow: #eef0f2;
   --color-yellow: #ffed00;
   --color-light: #ffffff;
