--- a/src/components/fanshop-section/fanshop-section.scss
+++ b/src/components/fanshop-section/fanshop-section.scss
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    transition: all 0.3s;
     z-index: 1;
     svg {
       width: 19px;
@@ -35,7 +36,8 @@
     text-decoration: none;
     padding-bottom: 40px;
     &:hover {
-      .fanshop-link__logo {
+      .fanshop-link__logo,
+      .fanshop__btn {
         transform: scale(1.1);
       }
     }
@@ -68,7 +70,7 @@
   border-left: 2px solid var(--color-yellow);
   padding: 40px 18px;
   &:hover {
-    .product__img {
+    .fanshop__btn {
       transform: scale(1.1);
     }
   }
