--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,6 +13,12 @@
     position: relative;
     z-index: 999;
     padding-left: 116px;
+
+    &:hover {
+      img {
+        transform: scale(1.1);
+      }
+    }
     @include media-breakpoint-down(sm) {
       padding-left: 88px;
     }
@@ -30,6 +36,7 @@
         height: 5.5rem;
       }
       img {
+        transition: all 0.3s;
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -79,6 +86,7 @@
   justify-content: space-between;
   padding-top: 20px;
   padding-bottom: 20px;
+  align-items: center;
   &-nav {
     display: flex;
 
