--- a/src/components/hp-posts-section/hp-posts-section.scss
+++ b/src/components/hp-posts-section/hp-posts-section.scss
@@ -1,7 +1,13 @@
 .hp-posts {
+  margin-bottom: 40px;
   &__col {
     margin-bottom: 40px;
     height: 100%;
     width: 100%;
+  }
+  .btn {
+    margin: -16px auto 0;
+    width: fit-content;
+    display: block;
   }
 }
