--- a/src/components/matches-dashboard-section/matches-dashboard-section.scss
+++ b/src/components/matches-dashboard-section/matches-dashboard-section.scss
@@ -56,8 +56,8 @@
       width: 30px;
       height: 24;
       img {
-        width: 100%;
-        height: 100%;
+        width: 24px;
+        height: 24px;
         object-fit: contain;
       }
     }
