--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,9 +1,13 @@
 .post {
   height: 408px;
   display: block;
+  overflow: hidden;
   &:hover {
     .h3 {
       text-decoration-color: var(--color-light) !important;
+    }
+    .post__img img {
+      transform: scale(1.1);
     }
   }
   &__info {
@@ -14,6 +18,7 @@
     right: 0;
     text-align: center;
     color: var(--color-light);
+    z-index: 2;
   }
   .h3 {
     margin-bottom: 16px;
@@ -27,6 +32,7 @@
   &__img {
     height: 100%;
     img {
+      transition: all 0.3s;
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -40,6 +46,7 @@
     &::before {
       content: "";
       position: absolute;
+      z-index: 1;
       background: linear-gradient(
           180deg,
           rgba(0, 0, 0, 8e-5) 28.06%,
