--- a/src/scss/06-components/_content.scss
+++ b/src/scss/06-components/_content.scss
@@ -19,23 +19,193 @@
   > :last-child {
     margin-bottom: 0;
   }
+
+  a {
+    color: var(--color-blue);
+    text-decoration: underline;
+    text-decoration-color: var(--color-blue);
+    transition: text-decoration-color 0.3s;
+    &:hover {
+      text-decoration-color: transparent;
+    }
+  }
+  h1 {
+    margin-bottom: 24px;
+    @include media-breakpoint-down(md) {
+      margin-bottom: 16px;
+    }
+  }
   h2,
-  h3 {
+  h3,
+  h4,
+  h5 {
     margin-bottom: 16px !important;
     color: var(--color-blue);
   }
-
+  q {
+    padding: 16px;
+    background-color: var(--color-gray);
+    display: block;
+    margin: 24px -16px;
+    position: relative;
+    @include media-breakpoint-down(lg) {
+      margin-left: 0;
+      margin-right: 0;
+    }
+    &::before {
+      background-image: url("../images/ico/q1.svg");
+      left: 0;
+      bottom: 0;
+    }
+    &::after {
+      right: 0;
+      top: 0;
+      background-image: url("../images/ico/q2.svg");
+    }
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      @include media-breakpoint-down(lg) {
+        width: 18px;
+        height: 18px;
+      }
+    }
+    h3 {
+      text-align: center;
+      background-color: var(--color-light);
+      padding: 16px 48px;
+      margin-bottom: 0 !important;
+      line-height: 25px;
+      @include media-breakpoint-down(lg) {
+        padding-left: 16px;
+        padding-right: 16px;
+      }
+    }
+  }
+  .perex {
+    margin-bottom: 24px;
+  }
   p {
     font-size: 16px;
     line-height: 23px;
-    margin: 24px 0;
+    margin: 16px 0 16px;
+    strong {
+      display: block;
+    }
     @include media-breakpoint-down(md) {
       font-size: 14px;
       line-height: 20px;
     }
   }
-}
+  ul {
+    font-size: 16px;
+    line-height: 23px;
+    margin: 24px 0;
+    > li {
+      position: relative;
+      padding-left: 24px;
+      margin-bottom: 16px;
+      &::before {
+        content: "";
+        background-color: var(--color-blue);
+        position: absolute;
+        top: 10px;
+        left: 0;
+        width: 8px;
+        height: 8px;
+      }
+      > ul {
+        margin: 16px 0 0;
+        > li {
+          &::before {
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+  }
+  ol {
+    font-size: 16px;
+    line-height: 23px;
+    margin: 24px 0;
+    counter-reset: item;
 
+    > li {
+      counter-increment: item;
+      position: relative;
+      padding-left: 32px;
+      margin-bottom: 16px;
+      &::before {
+        content: counter(item) ")";
+        color: var(--color-blue);
+        font-weight: 700;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      > ol {
+        margin: 16px 0 0;
+        > li {
+          &::before {
+            content: counter(item) ".";
+          }
+        }
+      }
+    }
+  }
+  table {
+    font-size: 16px;
+    line-height: 18px;
+    margin: 0;
+    border-spacing: 0;
+  }
+  tr:last-child td {
+    border-bottom: none;
+  }
+  th,
+  td {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  th {
+    text-align: left;
+    background-color: var(--color-blue);
+    color: var(--color-light);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    padding-top: 8px;
+  }
+  td + td {
+    border-left: 1px solid var(--color-gray);
+  }
+  td {
+    border-bottom: 1px solid var(--color-gray);
+    padding-bottom: 16px;
+    padding-top: 16px;
+  }
+}
+.table-responsive {
+  padding: 16px;
+  background-color: var(--color-gray);
+  margin: 24px -16px;
+  @include media-breakpoint-down(lg) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+.table {
+  background-color: var(--color-light);
+}
+.table > :not(:first-child) {
+  border-top: none;
+}
 .h1,
 .o-content h1 {
   font-weight: 700;
@@ -94,7 +264,6 @@
   font-size: 14px;
   line-height: 16px;
 }
-
 .p1 {
   font-size: 16px;
   line-height: 22px;
@@ -127,7 +296,6 @@
     line-height: 13px;
   }
 }
-
 a {
   text-decoration: underline;
   text-decoration-color: var(--color-primary);
@@ -135,4 +303,7 @@ a {
   &:hover {
     text-decoration-color: transparent;
   }
+}
+.bg-white {
+  background-color: var(--color-light);
 }
