--- a/src/components/base/base.scss
+++ b/src/components/base/base.scss
@@ -7,7 +7,7 @@
   background-size: contain;
   background-position: bottom;
   background-repeat: no-repeat;
-  background-image: url("../images/content/bg.jpg");
+  background-image: url("../images/content/bgs.jpg");
 }
 .base {
   background-color: #eef0f2;
