--- a/src/scss/06-components/_menu-section.scss
+++ b/src/scss/06-components/_menu-section.scss
@@ -11,6 +11,10 @@
 
   &__form {
     flex-wrap: wrap;
+    .btn {
+      margin: 0 32px 0 8px;
+      display: block;
+    }
     label + label {
       margin-left: 16px;
     }
