--- a/src/components/fotogalerie-section/fotogalerie-section.twig
+++ b/src/components/fotogalerie-section/fotogalerie-section.twig
@@ -23,7 +23,7 @@
          </div>
       </div>   
    </div>
-   <div class="fotogalerie-section__inner">
+   <div class="fotogalerie-section__inner mb-5 mb-md-10">
       <div class="container">
          <div class="row g-5 g-md-10 js-gallery">
             <div class="col-lg-4 col-sm-6 cl-12">
