--- a/src/layouts/10.0_partneri.twig
+++ b/src/layouts/10.0_partneri.twig
@@ -3,18 +3,12 @@
 {% set title = "04.0_Partneři" %}
 
 {% block main %}
-   <section class="partners-section">
-        <div class="menu-section">
-         <div class="container">
-            <div class="menu-section__inner ">
-               <h1 class="h1">
-               Hlavní partneři
-               </h1>
-            </div>
-         </div>   
-      </div>
+   <section class="partners-section mt-5 mt-md-10">
       <div class="partners-section__inner mb-5 mb-md-10">
          <div class="container"> 
+            <h1 class="h1">
+               Hlavní partneři
+            </h1>
             <ul class="row g-5 g-md-10">
                <li class="col-lg-4 col-sm-6 cl-12">
                   <a target="_blank" href="#">
@@ -69,6 +63,24 @@
                 <li class="col-lg-3  col-sm-4 cl-12">
                   <a target="_blank" href="#">
                      <img src="images/content/2.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-3  col-sm-4 cl-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+            </ul>
+            <h2 class="h2">Mediální partneři</h2>
+            <ul class="row g-5 g-md-10">
+               <li class="col-lg-3  col-sm-4 cl-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-3  col-sm-4 cl-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
                </li>
                 <li class="col-lg-3  col-sm-4 cl-12">
